--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
-name = "http-server"
-version = "0.1.0"
+name = "crud_api"
+version = "0.1.1"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+actix-web = "4.4.0"
+async-trait = "0.1.74"
+json = "0.12.4"
+postgres = "0.19.7"
+serde = "1.0.193"
+serde_json = "1.0.108"
+sqlx = "0.7.3"
+tokio = "1.34.0"
+tokio-postgres = "0.7.10"
+utoipa = "4.1.0"
+utoipa-swagger-ui = { version ="5.0.0", features = ["actix-web"] }
